docs: tweak css so a horizontal scroll bar shows up on the wide pinout tables. Fixes #166

--- a/docs/static/customstyle.css
+++ b/docs/static/customstyle.css
@@ -8,3 +8,19 @@
 .admonition-difference-to-cpython .admonition-title {
     margin: 4px;
 }
+
+
+
+/* override table width restrictions */
+@media screen and (min-width: 767px) {
+
+   .wy-table-responsive table td {
+      /* !important prevents the common CSS stylesheets from overriding
+         this as on RTD they are loaded after this stylesheet */
+      white-space: normal !important;
+   }
+
+   .wy-table-responsive {
+      overflow: visible !important;
+   }
+}
